# parallel-computations-hw

./: Cargo.toml  flake.nix
src/: cmd.rs  main.rs  multiply2.cl  par.rs  seq.rs  task.rs  types.rs  util.rs
src/par/: config.rs  multiply1.cl  multiply2.cl  multiply3.cl
