[package]
name = "paralell-computations-hw"
authors = [
    "Petr Portnov <mrjarviscraft@gmail.com>",
]
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
opencl3 = "0.9.5"
rand = { version = "0.8.5", optional = true }

[features]
random = ["dep:rand"]
