[package]
name = "paralell-computations-hw"
authors = [
    "Petr Portnov <mrjarviscraft@gmail.com>",
]
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
opencl3 = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rayon = "1.10"
thiserror = "2.0"
rand = "0.8.5" 
comfy-table = "7.1"

[features]
profiling = []
